--- a/index.css
+++ b/index.css
@@ -1230,6 +1230,7 @@ color: #D3D3D3;
 #box-fifth-last{
     max-width: 669px;
 height: 490px;
+position: relative;
 background: #01052d;
 border-radius: 15px 15px 74px 15px;
 border: 2px solid #67AEFF
@@ -1261,6 +1262,20 @@ padding-left: 24px;
 color: #D3D3D3;
 background: #010740;
 border: 2px solid  #010740;
+}
+input::placeholder {
+    color:#656C92;
+    width: auto;
+    height: 19px;
+    font-family: "Gilroy midium";
+font-size: 16.8px;
+letter-spacing: 0.1rem;
+font-weight: 700;
+line-height: 19.34px;
+text-align: left;
+}
+input::placeholder :hover {
+    color: white;
 }
 input:hover {
     border: 2px solid #67AEFF;
@@ -1303,6 +1318,19 @@ margin-top: 16px;
 display: flex;
 background: linear-gradient(95.94deg, #9D67E5 0.32%, #67AEFF 98.86%);
 }
+.for-second-last-section hr {
+    width: 6px;
+height: 170px;
+top: 0px;
+background: #67AEFF;
+box-shadow: 0px 0px 7px 0px #3276DD80;
+margin: 0;
+border: 0;
+top: 30px;
+border-radius: 3px;
+position: absolute;
+left: 0;
+}
 .for-names{
     padding-top: 30px;
     padding-right: 98px;
@@ -1331,7 +1359,7 @@ border: 1px solid #67AEFF;
 }
 footer {
     width: auto;
-height: 242px;
+height: 214px;
 display: flex;
 flex-wrap: wrap;
 align-items: flex-end;
@@ -1427,7 +1455,7 @@ color: #D3D3D3;
     color: #D3D3D3;
 }
 .foter-first hr {
-    width: auto;
+    width: 100%;
     height: 2px;
     border: 0;
     border-radius: 5px;
@@ -1588,7 +1616,14 @@ input{
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
-
+    }
+    .foter-first {
+        display: flex;
+        flex-wrap: wrap;
+        flex-direction: column;
+    }
+    .second-info {
+        margin-bottom:  0;
     }
 }
 @media screen and (max-width: 1020px) {
@@ -1662,6 +1697,17 @@ display: none;
 @media screen and (max-width: 1012px) {
     .circle-third h3 br {
         display: none;
+    }
+    .second-info h1 {
+        display: none !important;
+    }
+    .second-info h2 {
+        width: auto;
+        height: auto;
+    }
+    .second-info h3{
+        width: auto;
+        height: auto;
     }
 }
 @media screen and (max-width: 982px) {
@@ -1761,6 +1807,9 @@ display: none;
         flex-wrap: wrap;
         justify-content: center !important;
     }
+    .second-box-last {
+        width: auto;
+    }
     .forth-container {
 height: 476px !important;
     }
@@ -1795,9 +1844,7 @@ display: none;
     .second-info {
         gap: 15px !important;
     }
-    .second-info h1 {
-        display: none !important;
-    }
+   
     .new {
         display: flex;
         justify-content: center;
@@ -2075,8 +2122,7 @@ font-size: 20px !important;
     font-size: 18px !important;
    }
 .new-child h3 {
-width: auto;
-height: auto;
+
 padding: 0 15px;
 }
 } 
@@ -2139,6 +2185,11 @@ line-height: 20px;
     }
 
 }
+@media screen and (max-width: 511px) {
+    .foter-first {
+        height: auto;
+    }
+}
 @media screen and (max-width: 555px) {
 .circle-third h3 {
     font-size: 9.9px;
@@ -2151,6 +2202,19 @@ line-height: 20px;
     font-size: 9.9px !important;
     line-height: 14.34px ;
 }
+.second-info h3 {
+    font-size: 15px !important;
+}
+.second-info h2 {
+    font-size: 15px !important;
+}
+.about h1 {
+    font-size: 16px !important;
+}
+.about h2 {
+    font-size: 17PX;
+}
+
 }
 @media screen and (max-width: 435px) {
     .second-sec-first {
@@ -2174,4 +2238,95 @@ line-height: 20px;
     }
 
 
+}
+@media screen and (max-width: 470px) {
+    .containt-image h6 {
+        width: auto !important;
+        height: auto;
+    }
+    .new-child h3 {
+        width: auto;
+height: auto;
+    }
+    .inner-second-box {
+        max-width: 116px;
+    }
+    .inner-second-box h2 {
+width: auto !important;
+height: auto !important;
+    }
+    .inner-second-box h3 {
+        width: auto !important;
+        height: auto !important;
+    }
+    .inner-third-forth {
+        width: auto !important;
+        height: auto !important;
+    }
+
+    .second-con {
+        width: auto !important;
+        height: auto;
+    }
+    .inner-third-forth {
+        width: auto;
+    }
+    .inner-second-box {
+        max-width: 116px !important;
+    }
+}
+@media screen and (max-width: 712px) {
+    #first-first {
+        flex-wrap: wrap;
+        justify-content: center !important;
+      align-items: center;
+    margin: 0 34px !important;
+    }
+
+    #first-first img {
+        margin-bottom: 5px;
+
+    }
+    .about h2 {
+        width: auto;
+        height: auto;
+        padding-right: 6px;
+    }
+    .about h1 {
+        width: auto;
+        height: auto;
+        padding-right: 19px;
+    }
+    .last-footer h2 {
+        width: auto;
+        height: auto;
+    }
+    .end-footer h1 {
+        width: auto;
+        height: auto;
+    }
+ 
+    .end-footer h2 {
+        width: auto;
+        height: auto;
+    }
+    footer {
+        justify-content: center !important;
+        align-items: center !important;
+    }
+    .second-info {
+        justify-content: center !important;
+        margin-top: 12PX ;
+    }
+    .about {
+        margin: 0 25px !important;
+        width: -webkit-fill-available;
+        height: auto;
+        margin-left: 16px;
+    }
+}
+@media screen and (max-width: 376px) {
+    .second-sec-first h2 {
+        font-size: 45px !important;
+    }
 }
