--- a/index.css
+++ b/index.css
@@ -260,7 +260,7 @@ height: 504.48px;
     justify-content: center;
 }
 #section-second {
-    padding: 28px 46px 45px 47px;
+    padding: 28px 43px 45px 44px;
 border-radius: 25px;
 border: 3px solid #5D66B1;
 background: linear-gradient(93.08deg, rgba(1, 5, 45, 0.65) 0.01%, rgba(1, 5, 45, 0.75) 100%);
@@ -1460,7 +1460,6 @@ color: #D3D3D3;
     border: 0;
     border-radius: 5px;
     background: #67AEFF33;
-
 }
 .last-footer {
     width: auto;
@@ -1528,6 +1527,15 @@ color: #656C92;
     }
     .sixth-inner h4 {
         font-size: 22px;
+    }
+    .inner-eight h3 {
+        font-size: 20px;
+    }
+
+  }
+  @media screen and (min-width: 870px) {
+    .sixth-inner h4 br {
+display: none;
     }
   }
   @media screen and (max-width: 1080px) {
@@ -1626,13 +1634,18 @@ input{
         margin-bottom:  0;
     }
 }
+@media screen and (max-width: 1004px) {
+    #inner-first {
+        margin-right: 38px;
+    }
+}
 @media screen and (max-width: 1020px) {
     .header {
         width: 98% !important;
     }
     
     #section-second {
-        padding: 19px 35px 19px 37px !important;
+        padding: 22px 35px 22px 35px !important;
     }
     .box {
         padding: 0 25px !important;
@@ -1663,18 +1676,8 @@ flex-basis: auto;
 .seven-inner h6 br {
 display: none !important;
 }
-.second-inner h5 {
-    font-size: 19px !important;
-}
-#fifth-inner h6 {
-    font-size: 17px !important;
-}
-
-
 body{
     overflow-x: hidden !important;
-
-  
 }
   }
 }
@@ -1710,6 +1713,15 @@ display: none;
         height: auto;
     }
 }
+@media screen and (max-width: 908px) {
+    .sixth-inner h4 {
+        font-size: 21px !important;
+    }
+    .third-inner h4 {
+        font-size: 18px !important;
+    }
+
+}
 @media screen and (max-width: 982px) {
 .parent-parent {
     gap: 29px !important;
@@ -1721,6 +1733,16 @@ display: none;
 .last-child-first {
     padding: 96px 17px 26px 26px !important; 
 }
+}
+@media screen and (max-width: 987px) {
+   .forth-inner {
+       margin-right: 34px  !important;
+   }
+}
+@media screen and (max-width: 968px) {
+    .forth-inner {
+        margin-right: 43px ;
+    }
 }
 @media screen and (max-width: 958px) {
     .box-pink {
@@ -1737,6 +1759,12 @@ display: none;
     }
     #best h3 {
         font-size: 14px !important;
+    }
+}
+
+@media screen and (max-width: 1004px) {
+    .forth-inner {
+        margin-right: 35px;
     }
 }
  @media screen and (max-width: 940px) {
@@ -1762,6 +1790,12 @@ display: none;
     }
     .forth-second h3 {
         font-size: 19px !important;
+    }
+
+}
+@media screen and (max-width: 946px) {
+    .forth-inner {
+        margin-right: 32px;
     }
 
 }
@@ -1816,9 +1850,7 @@ height: 476px !important;
     .containt-image h6 {
         position: relative;
     }
-    .third-header {
-        display: none !important; 
-    }
+
     .new-image {
         overflow: hidden;
         max-width: 100%;   
@@ -1915,6 +1947,14 @@ font-size: 13px !important;
         font-size: 13px;
     }
 }
+@media screen and (max-width: 870px) {
+.inner-eight h3 {
+    margin-bottom: 20px;
+}
+.inner-eight {
+    margin-top: 23px;
+}
+}
 @media screen and (min-width: 860px) {
     .second-good {
         display: none !important; 
@@ -1956,6 +1996,28 @@ font-size: 13px !important;
     .forth-container {
         height: 439px !important;
     }
+}
+@media screen and (max-width: 784px) {
+  .box {
+    flex-wrap: wrap;
+  }
+  .inner-section {
+    flex-wrap: wrap;
+  }
+  #inner-first {
+margin-right: 10px;
+}
+  .forth-inner {
+    margin-top: 27px;
+    margin-right: 10px !important;
+  }
+  .sixth-inner h4 {
+display: flex !important; 
+  }
+  #inner-seven {
+    margin-top: 27px;
+    margin-right: 10px !important;
+  }
 }
 @media screen and (max-width: 768px) {
     .second-section {
